--- a/helloflask/templates/application.html
+++ b/helloflask/templates/application.html
@@ -29,7 +29,7 @@
         margin-bottom: 30px;
       }
       .row {
-        padding; 5px;
+        padding: 5px;
       }
       @media (max-width: 991px) {
         #intro {
